Fixed bug #76717

Print INT_MIN as -INT_MAX-1 to avoid it getting parsed as a float
literal due to integer overflow.